tests/expectations/compiler/constants/duplicate_global_constant_fail.out
Error [EAST0372013]: the global constant `MAX` is being shadowed.
    --> compiler-test:3:11
     |
   2 |     const MAX: u32 = 100;
     |           ^^^ previous definition of the global constant `MAX` here
   3 |     const MAX: u32 = 200;
     |           ^^^ `MAX` redefined here
     |
     = names must be unique within their scope
